2010-01-12	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a bug introduced in last commmit

2010-01-12	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/DataServer.pm: Updated to process GIS information from 
	the .data (altitude, latitude, longitude and timezone_offset).

	* lib/PandoraFMS/Core.pm: Added pandora_update_position function, to 
	store GIS information on the databse.

	* lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/PredictionServer.pm,
	lib/PandoraFMS/NetworkServer.pm, lib/PandoraFMS/WMIServer.pm: Updated
	to send timezone_offset to pandora_update_agent function.

	* util/pandora_xml_stress.pl, util/pandora_xml_stress.README: Updated
	to generate agents with GIS information (altitude, latitude, longitude
	and timezone_offset).

2009-12-29  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed problem generating events with 
	character ' that makes SQL queries in console to fail.

	* util/plugin/webcheck_plugin.sh: Christmas extra :-). Plugin
	to check WEB content change (by MD5 stamp).

2009-12-28  Sancho Lerena <slerena@artica.es>

	* lib/Config.pm: pandora_exec default at /usr/bin

	* util/pandora_logrotate: Optimized logrotate setup.

	* pandora_server.spec: Start tentacle after install breaks the
	Upgrade process on RPM (error if already running).

	* util/pandora_server: Added mysql as "should-start" in LSB tags

2009-12-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
          lib/PandoraFMS/ReconServer.pm,
          lib/PandoraFMS/DataServer.pm: Use agent provided interval for agent
          auto creation. The default interval was being used instead.

2009-12-23  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed some typos in planned downtime subroutine.

	* bin/pandora_server: Some operations like planned downtime check and
	server down detection are put in a low-priority check, more efficient and
	less time-consuming.
