@@ -1,4 +1,4 @@
-package: PandoraFMS-Server-Enterprise
+package: PandoraFMS-Server
 Version: 3.0.0
 Architecture: all
 Priority: optional
@@ -6,5 +6,5 @@ Section: admin
 Installed-Size: 640
 Maintainer: Miguel de Dios <miguel.dedios@artica.es>
 Homepage: http://pandorafms.org/
-Depends: pandorafms-server, libio-socket-multicast-perl
-Description: Pandora FMS is a monitoring system for big IT environments. It uses remote tests, or local agents to grab information. Pandora supports all standard OS (Linux, AIX, HP-UX, Solaris and Windows XP,2000/2003), and support multiple setups in HA enviroments.
+Depends: perl (>= 5.8), libmail-sendmail-perl, libdbi-perl, libdbd-mysql-perl,libtime-format-perl, libnetaddr-ip-perl, libtime-format-perl, libxml-simple-perl, libhtml-parser-perl, snmp, snmpd, traceroute, xprobe2, nmap, sudo
+Description: Pandora FMS is a monitoring system for big IT environments. It uses remote tests, or local agents to grab information. Pandora supports all standard OS (Linux, AIX, HP-UX, Solaris and Windows XP,2000/2003), and support multiple setups in HA enviroments. This is the server package. Server makes the remote checks and process information transfer by Pandora FMS agents to the server.
